# schwab-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  Containerfile  Dockerfile.admin  Dockerfile.mcp  README.md  SECURITY_REVIEW.md  deploy.sh  pyproject.toml  renovate.json  schwab-auth.sh
.github/workflows/: agent.yaml  ci.yml  container.yml
docs/: cloud-run-deployment.md
src/schwab_mcp/: cli.py  context.py  tokens.py
src/schwab_mcp/admin/: app.py
src/schwab_mcp/approvals/: base.py
src/schwab_mcp/db/: _ingestion.py  _manager.py
src/schwab_mcp/remote/: app.py  config.py  oauth.py  rate_limit.py  token_storage.py
src/schwab_mcp/tools/: __init__.py  options.py  order_helpers.py  orders.py  quotes.py  stored_options.py  utils.py
tests/: test_admin_app.py  test_oauth_provider.py  test_quotes.py  test_registry.py  test_stored_options.py  test_token_self_heal.py  test_token_storage.py
